fix event listener, unshift method, and header #1

--- a/css/layout.css
+++ b/css/layout.css
@@ -49,4 +49,8 @@ input {
   .column-half {
     width: 50%;
   }
+
+  .header {
+    padding: 0 0.75rem;
+  }
 }
